# AutoCoding

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config_local.yaml  9a777781e1996eecc257e434db4960f7b22ca818e4495a97607de013948f266d_ori.json  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_ZH.md  README省流版.md  chat.py  gold.validate-gold.json  lauch.py  package-lock.json  print_dataset.py  print_dataset_head.py  qwen3-coder-flash-1.json  qwen3-coder-flash-2.json  qwen3-coder-flash-3.json  qwen3-coder-flash.full-eval.json  qwen3-coder-flash.qwen3-coder-flash.json  qwen3-coder-flash.single-instance-eval.json  qwen3-max-web-search.json  qwen3-max.json  requirements.txt  run_agent.py  run_gpt.sh  run_kaggle.sh  setup.cfg  setup.py  setup.sh  test.py  tmp.py
common/compatibility_api/: pyproject.toml
common/compatibility_api/compatibility_api/: api.py  task.py
common/compatibility_api_preparedness/: pyproject.toml
common/compatibility_api_preparedness/compatibility_api_preparedness/: api.py
common/nanoeval/: README.md  pyproject.toml
common/nanoeval/docs/: computer_tasks.md
common/nanoeval/nanoeval/: _aiomonitor.py  _db.py  _executor_worker.py  _multiprocessing_utils.py  _persistent_db.py  asyncio_utils.py  eval.py  evaluation.py  evaluation_test.py  fs_paths.py  json_recorder_test.py  library_config.py  monitor.py  recorder.py  setup.py
common/nanoeval/nanoeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/nanoeval/nanoeval/contrib/: __init__.py  utils.py
common/nanoeval/nanoeval/examples/: _gpqa.py  bundled_evals_test.py
common/nanoeval/nanoeval/metrics/: agents.py  standard.py  standard_test.py
common/nanoeval/nanoeval/solvers/: mcq.py  mcq_api.py  mcq_test.py  short_answer.py
common/preparedness_turn_completer/: pyproject.toml
common/preparedness_turn_completer/preparedness_turn_completer/: __init__.py  oai_completions_turn_completer.py  turn_completer.py  utils.py
common/preparedness_turn_completer/preparedness_turn_completer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/preparedness_turn_completer/preparedness_turn_completer/oai_responses_turn_completer/: completer.py  converters.py  type_helpers.py
common/preparedness_turn_completer/tests/oai_responses_turn_completer/: test_converters.py  test_integration_completer.py  test_type_helpers.py
paperbench/: README.md  pyproject.toml  pytest.ini
paperbench/data/papers/adaptive-pruning/: addendum.md  paper.md  rubric.json
paperbench/data/papers/all-in-one/: addendum.md  paper.md  rubric.json
paperbench/data/papers/bam/: addendum.md  paper.md  rubric.json
paperbench/data/papers/bbox/: addendum.md  paper.md  rubric.json
paperbench/data/papers/bridging-data-gaps/: addendum.md  paper.md  rubric.json
paperbench/data/papers/fre/: addendum.md  paper.md  rubric.json
paperbench/data/papers/ftrl/: addendum.md  paper.md  rubric.json
paperbench/data/papers/lbcs/: addendum.md  judge.addendum.md  paper.md  rubric.json
paperbench/data/papers/lca-on-the-line/: addendum.md  paper.md  rubric.json
paperbench/data/papers/mechanistic-understanding/: addendum.md  paper.md  rubric.json
paperbench/data/papers/pinn/: addendum.md  paper.md  rubric.json
paperbench/data/papers/rice/: addendum.md  judge.addendum.md  paper.md  rubric.json
paperbench/data/papers/robust-clip/: addendum.md  paper.md  rubric.json
paperbench/data/papers/sample-specific-masks/: addendum.md  paper.md  rubric.json
paperbench/data/papers/sapg/: addendum.md  paper.md  rubric.json
paperbench/data/papers/self-composing-policies/: addendum.md  paper.md
paperbench/data/papers/self-expansion/: addendum.md  paper.md  rubric.json
paperbench/data/papers/semantic-self-consistency/: addendum.md  judge.addendum.md  paper.md  rubric.json
paperbench/data/papers/sequential-neural-score-estimation/: addendum.md  paper.md  rubric.json
paperbench/data/papers/stay-on-topic-with-classifier-free-guidance/: addendum.md  judge.addendum.md  paper.md  rubric.json
paperbench/data/papers/stochastic-interpolants/: addendum.md  paper.md  rubric.json
paperbench/data/papers/test-time-model-adaptation/: addendum.md  paper.md  rubric.json
paperbench/data/papers/what-will-my-model-forget/: addendum.md  paper.md  rubric.json
paperbench/experiments/judge_eval/: judge_eval_perf_cost.py  run_judge_eval_sweep.sh
paperbench/experiments/judge_max_depth/: plot.py
paperbench/experiments/pbcd_correlation/: plot.py
paperbench/experiments/splits/: dev.txt  testing.txt
paperbench/paperbench/: Dockerfile.base  grade.py  metrics.py  paper_registry.py  reproducer.Dockerfile  utils.py
paperbench/paperbench/agents/: apply_patch.py  registry.py  run.py  upload.py  utils.py
paperbench/paperbench/agents/aisi-basic-agent/: Dockerfile  _basic_agent_iterative.py  _basic_agent_plus.py  _execute.py  config.yaml  requirements.txt  start.py  templates.py  utils.py
paperbench/paperbench/agents/instructions/: code_only_instructions.txt  instructions_iterative.txt
paperbench/paperbench/gui/: app.py
paperbench/paperbench/infra/: alcatraz.py
paperbench/paperbench/judge/: base.py  create_judge.py  dummyrandom.py  graded_task_node.py  simple.py  token_usage.py  utils.py
paperbench/paperbench/judge/judge_eval/: download_data.py  (+2 more)
paperbench/paperbench/monitor/: create_monitor.py  monitor.py
paperbench/paperbench/nano/: README.md  entrypoint.py  eval.py  logging.py  structs.py  task.py  utils.py
paperbench/paperbench/rubric/: tasks.py  utils.py
paperbench/paperbench/scripts/: alcatraz_services.py  build-docker-images.sh  run_judge.py  run_judge_eval.py  run_monitor.py  run_reproduce.py
paperbench/paperbench/solvers/: base.py
paperbench/submissions/rice/: README.md  reproduce.sh  requirements.txt  run_rice_experiment.py  train_pretrained_policies.py
paperbench/tests/: conftest.py
paperbench/tests/integration/: configs.py  test_run_agent.py  test_scripts.py
paperbench/tests/unit/: test_computer.py  test_eval_utils.py  test_judge.py  test_nano_utils.py
(+711 files in other folders)
