[project]
name = "compatibility_api"
version = "0.1.0"
dependencies = [
    "chz", "pydantic", "nanoeval"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]

[tool.uv.sources]
chz = { git = "https://github.com/openai/chz.git" }
nanoeval = { path = "../nanoeval", editable = true }
nanoeval_alcatraz = { path = "../nanoeval_alcatraz", editable = true }
alcatraz = { path = "../alcatraz", editable = true }
preparedness-turn-completer = { path = "../preparedness_turn_completer", editable = true }

[tool.setuptools]
packages = { find = { include = ["compatibility_api", "compatibility_api.*"] } }

[build-system]
requires = ["setuptools<78.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.mypy]
mypy_path = ["../nanoeval"]

[[tool.mypy.overrides]]
module = ["alcatraz.*", "preparedness_turn_completer.*", "nanoeval.*", "nanoeval_alcatraz.*"]
ignore_errors = true
warn_unused_ignores = false
